# lets-ship-it

./: .gitignore  Dockerfile  LICENSE  NOTES  README.md  TODO.md  pyproject.toml
.claude/commands/: generate-tests.md  narrate.md  strip-whitespace.md
app/: main.py
chapters/: 00-fast-api-app.md
chapters/raw/: deploy-to-k8s.md  docker-app.md  fast-api-app.md  k8s-architecture.md  k8s-networking.md
chapters/raw/narrated/: fast-api-app.md
chapters/tests/: helpers.py  test_00_fast_api.py
manifests/: app.yaml
tests/: conftest.py
tests/pytest/: conftest.py  test_healthz.py
