[project]
name = "lets-ship-it"
version = "0.1.0"
description = "A Testable Guide to Cloud Infrastructure"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.8",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests/pytest"]
pythonpath = ["."]
